Corrected the last remarks (#7)
* [New Module] Model -> Models

* [Order Ex] Model -> Models

* [Price Ex] Model -> Models

* [New Module] Remove .tpl

* [New Module] Fix naming blade template in project file

* [Order Ex] Rename blade template file

* [Price Ex] web.js -> module.js

* [New Module] Optimized app.config

* [Order Ex] Optimized app.config

* [Price Ex] Optimized app.config

* [New Module] Optimized web.config

* [Order Ex] Optimized web.config

* [Price ex] Optimized web.config

* [Price Ex] Fix js naming problems

* [New Module] Framework version up

* [Price Ex] Framework version up

* [Order Ex]
- Framework version up
- Fix problems with renaming model to models

* [Wizard] Framework version up

* [Installer]
- Added support visual studio 2019
- Framework version up

* [Installer] version 2.0.8

* Added .editorconfig

* Changes module.ignore in all project templates

* Remove dublicate permission definitions

* Renaming to module.js

* [NewModule] Fix error with name (model -> models) in .core project

* [PriceEx] Remove permissions

* [NewModule] Fix problem with naming module.js

* [OrderEx] Removed redundant naming in .data project

* [NewModule] Fix problems naming with controller

* version up

* Set target framework v4.6.1

* version 2.1.0

--- a/CSharp/VirtoCommerce.Module.Template/Data/Data.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Data/Data.csproj
@@ -77,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Model\" />
+    <Folder Include="Models\" />
     <Folder Include="Repositories\" />
     <Folder Include="Services\" />
   </ItemGroup>
@@ -88,7 +88,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
