--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -24,6 +24,10 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -76,9 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Core\_packages.config" />
-    <None Include="Data\_app.config" />
     <None Include="Data\_packages.config" />
-    <None Include="Test\_app.config" />
     <None Include="Test\_packages.config" />
     <None Include="Web\_app.config" />
     <None Include="Web\module.ignore" />
@@ -117,7 +119,7 @@
     <Content Include="Data\Data.vstemplate" />
     <Content Include="Test\Test.csproj" />
     <Content Include="Test\Test.vstemplate" />
-    <Content Include="Web\Content\css\web.css" />
+    <Content Include="Web\Content\css\stylesheet.css" />
     <Content Include="Web\Content\help\arch_scheme.png" />
     <Content Include="Web\Content\help\index.html" />
     <Content Include="Web\Content\help\sample.png" />
@@ -125,9 +127,9 @@
     <Content Include="Web\Web.csproj" />
     <Content Include="Web\Web.vstemplate" />
     <Content Include="Web\Scripts\blades\helloWorld.js" />
-    <Content Include="Web\Scripts\blades\helloWorld.tpl.html" />
-    <Content Include="Web\Scripts\web.js" />
-    <Content Include="Web\Scripts\resources\web-api.js" />
+    <Content Include="Web\Scripts\blades\helloWorld.html" />
+    <Content Include="Web\Scripts\module.js" />
+    <Content Include="Web\Scripts\resources\module-api.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Test\Tests.cs" />
