--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -81,7 +81,7 @@
   <ItemGroup>
     <None Include="Core\_packages.config" />
     <None Include="Data\_packages.config" />
-    <None Include="Test\_packages.config" />
+    <None Include="Tests\_packages.config" />
     <None Include="Web\_app.config" />
     <None Include="Web\module.ignore" />
     <None Include="Web\module.manifest" />
@@ -90,7 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Web\AssemblyInfo.cs" />
-    <None Include="Test\AssemblyInfo.cs" />
+    <None Include="Tests\AssemblyInfo.cs" />
     <None Include="Core\AssemblyInfo.cs" />
     <None Include="Data\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,8 +117,8 @@
     <Content Include="Core\Core.vstemplate" />
     <Content Include="Data\Data.csproj" />
     <Content Include="Data\Data.vstemplate" />
-    <Content Include="Test\Test.csproj" />
-    <Content Include="Test\Test.vstemplate" />
+    <Content Include="Tests\Tests.csproj" />
+    <Content Include="Tests\Tests.vstemplate" />
     <Content Include="Web\Content\css\stylesheet.css" />
     <Content Include="Web\Content\help\arch_scheme.png" />
     <Content Include="Web\Content\help\index.html" />
@@ -132,7 +132,7 @@
     <Content Include="Web\Scripts\resources\module-api.js" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Test\Tests.cs" />
+    <None Include="Tests\Test.cs" />
     <None Include="Web\Controllers\Api\MyModuleController.cs" />
     <None Include="Web\Module.cs" />
   </ItemGroup>
