Fixed errors with rename Test to Tests

--- a/CSharp/VirtoCommerce.PriceExModule.Template/VirtoCommerce.PriceExModule.Template.csproj
+++ b/CSharp/VirtoCommerce.PriceExModule.Template/VirtoCommerce.PriceExModule.Template.csproj
@@ -112,7 +112,7 @@
     <None Include="Data\Models\PriceExEntity.cs" />
     <None Include="Data\Repositories\PriceExRepository.cs" />
     <None Include="Tests\AssemblyInfo.cs" />
-    <None Include="Tests\Tests.cs" />
+    <None Include="Tests\Test.cs" />
     <None Include="Web\AssemblyInfo.cs" />
     <None Include="Web\Module.cs" />
   </ItemGroup>
