[NewModule] Rename default blade from helloWorld to hello-world

--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -126,8 +126,8 @@
     <None Include="Web\Content\help\stylesheet.css" />
     <Content Include="Web\Web.csproj" />
     <Content Include="Web\Web.vstemplate" />
-    <Content Include="Web\Scripts\blades\helloWorld.js" />
-    <Content Include="Web\Scripts\blades\helloWorld.html" />
+    <Content Include="Web\Scripts\blades\hello-world.js" />
+    <Content Include="Web\Scripts\blades\hello-world.html" />
     <Content Include="Web\Scripts\module.js" />
     <Content Include="Web\Scripts\resources\module-api.js" />
   </ItemGroup>
