--- a/CSharp/VirtoCommerce.MemberExModule.Template/VirtoCommerce.MemberExModule.Template.csproj
+++ b/CSharp/VirtoCommerce.MemberExModule.Template/VirtoCommerce.MemberExModule.Template.csproj
@@ -59,9 +59,9 @@
     <None Include="Data\Migrations\201906052116109_Initial.cs" />
     <None Include="Core\AssemblyInfo.cs" />
     <None Include="Data\AssemblyInfo.cs" />
-    <Compile Include="Data\Migrations\201906052116109_Initial.Designer.cs">
+    <None Include="Data\Migrations\201906052116109_Initial.Designer.cs">
       <DependentUpon>201906052116109_Initial.cs</DependentUpon>
-    </Compile>
+    </None>
     <None Include="Data\Migrations\Configuration.cs" />
     <None Include="Data\Models\SupplierDataEntity.cs" />
     <None Include="Data\Models\SupplierReviewDataEntity.cs" />
@@ -105,9 +105,9 @@
     <None Include="Web\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Data\Migrations\201906052116109_Initial.resx">
+    <None Include="Data\Migrations\201906052116109_Initial.resx">
       <DependentUpon>201906052116109_Initial.cs</DependentUpon>
-    </EmbeddedResource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
