Create new template - MemberEx (#9)
* [New Module] Model -> Models

* [Order Ex] Model -> Models

* [Price Ex] Model -> Models

* [New Module] Remove .tpl

* [New Module] Fix naming blade template in project file

* [Order Ex] Rename blade template file

* [Price Ex] web.js -> module.js

* [New Module] Optimized app.config

* [Order Ex] Optimized app.config

* [Price Ex] Optimized app.config

* [New Module] Optimized web.config

* [Order Ex] Optimized web.config

* [Price ex] Optimized web.config

* [Price Ex] Fix js naming problems

* [New Module] Framework version up

* [Price Ex] Framework version up

* [Order Ex]
- Framework version up
- Fix problems with renaming model to models

* [Wizard] Framework version up

* [Installer]
- Added support visual studio 2019
- Framework version up

* [Installer] version 2.0.8

* Added .editorconfig

* Changes module.ignore in all project templates

* Remove dublicate permission definitions

* Renaming to module.js

* [NewModule] Fix error with name (model -> models) in .core project

* [PriceEx] Remove permissions

* [NewModule] Fix problem with naming module.js

* [OrderEx] Removed redundant naming in .data project

* [NewModule] Fix problems naming with controller

* version up

* Set target framework v4.6.1

* version 2.1.0

* Replace to net461

* Generate new GUID for vsix installer

* [NewModule] Renamed Test project to Tests

* [OrderEx] Renamed Test project to Tests

* [PriceEx] Renamed Test project to Tests

* Fix locale errors for web and test projects in templates

* Fixed errors with rename Test to Tests

* [MemberEx] Implemented new template project

* [Installer] Updated with new template

* [NewModule] Added tags for project search

* [NewModule] Rename default blade from helloWorld to hello-world

* [OrderEx] Added tags for project search

* [OrderEx] Fixed small problems

* [PriceEx] Added tags for project search

*

--- a/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
@@ -127,8 +127,8 @@
   <ItemGroup>
     <Content Include="module.manifest" />
     <Content Include="Content\css\$ext_safeprojectnamejs$.css" />
-    <Content Include="Scripts\blades\helloWorld.js" />
-    <Content Include="Scripts\blades\helloWorld.html" />
+    <Content Include="Scripts\blades\hello-world.js" />
+    <Content Include="Scripts\blades\hello-world.html" />
     <Content Include="Scripts\module.js" />
     <Content Include="Scripts\resources\$ext_safeprojectnamejs$-api.js" />
   </ItemGroup>
@@ -175,8 +175,7 @@
   <Import Project="$nugetpackagesfolder$MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets" Condition="Exists('$nugetpackagesfolder$MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
-    </PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>    </PropertyGroup>
     <Error Condition="!Exists('$nugetpackagesfolder$MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '$nugetpackagesfolder$MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets'))" />
     <Error Condition="!Exists('$nugetpackagesfolder$VirtoCommerce.Module.0.17.0\build\VirtoCommerce.Module.targets')" Text="$([System.String]::Format('$(ErrorText)', '$nugetpackagesfolder$VirtoCommerce.Module.0.17.0\build\VirtoCommerce.Module.targets'))" />
   </Target>
