Updated customer extension module template with lasted notes (#10)
* [New Module] Model -> Models

* [Order Ex] Model -> Models

* [Price Ex] Model -> Models

* [New Module] Remove .tpl

* [New Module] Fix naming blade template in project file

* [Order Ex] Rename blade template file

* [Price Ex] web.js -> module.js

* [New Module] Optimized app.config

* [Order Ex] Optimized app.config

* [Price Ex] Optimized app.config

* [New Module] Optimized web.config

* [Order Ex] Optimized web.config

* [Price ex] Optimized web.config

* [Price Ex] Fix js naming problems

* [New Module] Framework version up

* [Price Ex] Framework version up

* [Order Ex]
- Framework version up
- Fix problems with renaming model to models

* [Wizard] Framework version up

* [Installer]
- Added support visual studio 2019
- Framework version up

* [Installer] version 2.0.8

* Added .editorconfig

* Changes module.ignore in all project templates

* Remove dublicate permission definitions

* Renaming to module.js

* [NewModule] Fix error with name (model -> models) in .core project

* [PriceEx] Remove permissions

* [NewModule] Fix problem with naming module.js

* [OrderEx] Removed redundant naming in .data project

* [NewModule] Fix problems naming with controller

* version up

* Set target framework v4.6.1

* version 2.1.0

* Replace to net461

* Generate new GUID for vsix installer

* [NewModule] Renamed Test project to Tests

* [OrderEx] Renamed Test project to Tests

* [PriceEx] Renamed Test project to Tests

* Fix locale errors for web and test projects in templates

* Fixed errors with rename Test to Tests

* [MemberEx] Implemented new template project

* [Installer] Updated with new template

* [NewModule] Added tags for project search

* [NewModule] Rename default blade from helloWorld to hello-world

* [OrderEx] Added tags for project search

* [OrderEx] Fixed small problems

* [PriceEx] Add

--- a/CSharp/VirtoCommerce.MemberExModule.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.MemberExModule.Template/Web/Web.csproj
@@ -137,9 +137,14 @@
     <Content Include="Content\help\arch_scheme.png" />
     <Content Include="Content\help\index.html" />
     <Content Include="Content\help\stylesheet.css" />
+    <Content Include="Localizations\en.$ext_safeprojectnamejs$.json" />
     <Content Include="module.manifest" />
     <Content Include="Scripts\blades\supplier-detail.js" />
     <Content Include="Scripts\blades\supplier-detail.html" />
+    <Content Include="Scripts\blades\supplier-review-list.html" />
+    <Content Include="Scripts\blades\supplier-review-list.js" />
+    <Content Include="Scripts\widgets\supplier-reviews-widget.html" />
+    <Content Include="Scripts\widgets\supplier-reviews-widget.js" />
     <Content Include="Scripts\module.js" />
   </ItemGroup>
   <ItemGroup>
