--- a/CSharp/VirtoCommerce.OrderExModule.Template/Tests/_packages.config
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Tests/_packages.config
@@ -1,14 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoCompare" version="0.3.0.53" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="CacheManager.Core" version="0.8.0" targetFramework="net461" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Moq" version="4.12.0" targetFramework="net461" />
   <package id="Hangfire.Core" version="1.6.17" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net461" />
   <package id="VirtoCommerce.CartModule.Data" version="2.16.16" targetFramework="net461" />
   <package id="VirtoCommerce.Domain" version="2.25.21" targetFramework="net461" />
