--- a/CSharp/VirtoCommerce.Module.Template/Core/Core.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Core/Core.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModuleConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
