Localization added to the module trmplate

--- a/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/Web/Web.csproj
@@ -126,6 +126,7 @@
     <None Include="Content\help\stylesheet.css" />
     <None Include="Content\help\sample.png" />
     <None Include="Content\help\arch_scheme.png" />
+    <Content Include="Localizations\en.$ext_safeprojectname$.json" />
     <None Include="app.config" />
     <None Include="Web.config" />
   </ItemGroup>
