Add readme.md template CCIT-293
Readme.md template edited and added to module extensions templates

--- a/CSharp/VirtoCommerce.MemberExModule.Template/VirtoCommerce.MemberExModule.Template.csproj
+++ b/CSharp/VirtoCommerce.MemberExModule.Template/VirtoCommerce.MemberExModule.Template.csproj
@@ -107,6 +107,7 @@
     <None Include="Web\module.ignore" />
     <None Include="Web\module.manifest" />
     <None Include="Web\_packages.config" />
+	<None Include="Web\Readme.md" />
     <None Include="Web\Web.config" />
   </ItemGroup>
   <ItemGroup>
