--- a/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
+++ b/CSharp/VirtoCommerce.Module.Template/VirtoCommerce.Module.Template.csproj
@@ -128,17 +128,7 @@
   <ItemGroup>
     <None Include="test\Test.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\Core\Events\" />
-    <Folder Include="src\Core\Models\" />
-    <Folder Include="src\Core\Notifications\" />
-    <Folder Include="src\Core\Services\" />
-    <Folder Include="src\Data\Caching\" />
-    <Folder Include="src\Data\ExportImport\" />
-    <Folder Include="src\Data\Handlers\" />
-    <Folder Include="src\Data\Models\" />
-    <Folder Include="src\Data\Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
